# python-project-skeleton

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  yamlfmt.yaml
